Agregación de la lógica pra el inicio de sesión

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Iniciar Sesión{% endblock %}
+{% block title %}Inicio Sesión{% endblock %}
 
 {% block styles %}
   <!-- Incluir Tailwind CSS solo para la página de login -->
