--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -38,6 +38,11 @@
         <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition duration-200">Entrar</button>
       </div>
     </form>
+    <p class="mt-3 text-center">
+      ¿No tienes cuenta? <a href="{{ url_for('auth.register') }}">Regístrate aquí</a>
+    </p>
+    
   </div>
 </div>
 {% endblock %}
+  
