Pequeño cambio a mensaje de login y protección de ruta

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Inicio Sesión{% endblock %}
+{% block title %}SIIAPEC {% endblock %}
 
 {% block styles %}
   <!-- Incluir Tailwind CSS solo para la página de login -->
