Agregacion de una vista para cualquier página no encontrada (404), descarga de imágenes oficiales, así como incorporación del favicon de la página principal

--- a/app/static/css/login-register.css
+++ b/app/static/css/login-register.css
@@ -20,6 +20,7 @@ main.container {
 .login-page,
 .register-page {
   /* Quitamos un máximo fijo para que se ajuste a la altura del main */
+  min-height: auto;
   width: 100%;
   padding-top: 2rem;
   padding-bottom: 2rem;
