--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{% block title %}SIIAPEC{% endblock %}</title>
   <!-- Bootstrap CSS (CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +12,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-dymI5xeyXBMn1EA0XTsHSJ5nBweQm7Fqv2J1h7Mj3tq3AOG1v0i8zE5zpQBS4/6kdyopn6M/NSunxuqFqf7N7Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/login-register.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/login-register.css') }}"> 
+
+  <!-- icono de la página-->
+  <link rel="icon" href="{{ url_for('static', filename='assets/icons/favicon.ico') }}" type="image/x-icon">
+
   {% block styles %}{% endblock %}
 </head>
 <body class="d-flex flex-column min-vh-100">
