Modificacion del nombre de logos, ajustes en el login y el registro, corrección en los modelos

--- a/app/static/css/session.css
+++ b/app/static/css/session.css
@@ -28,3 +28,9 @@
     margin: 0 0.5rem;
   }
   
+  .diseño {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
