--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}Página no encontrada - 404{% endblock %}
-
+<!-- Sobrescritura de la barra de navegación para que no aparezca-->
+{% block navbar %}{%endblock%} 
 {% block styles %}
   {{ super() }}
   <!-- Opcional: Incluir Animate.css para efectos predefinidos -->
