--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,7 +61,7 @@
 
   
   <!-- WRAPPER: sidebar + contenido -->
-  <div class="container-fluid flex-grow-1 d-flex p-0">
+  <div class="container-fluid flex-grow-1 d-flex p-0" >
     <!-- SIDEBAR -->
     {%block navbar%}
     <aside class="bg-light border-end vh-100" style="width:240px;">
@@ -100,7 +100,7 @@
     {%endblock%}
 
     <!-- MAIN CONTENT -->
-    <main class="flex-grow-1 overflow-auto bg-light p-4">
+    <main class="flex-grow-1 overflow-auto p-4" id = "main-content">
       {% block content %}{% endblock %}
     </main>
   </div>
