Creación de animaciones al entrar o salir de una ruta, así como la plantilla para la vista de los programas detallados, la creación de una plantilla par el error 500 del servidor, y modificacion del modelo del programa para agregarle el 'slug' que sería el que se muestre en el url

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -12,8 +12,8 @@
 
 {% block content %}
 <div class="error-container">
-  <div class="error-code animate__animated animate__bounce">404</div>
-  <div class="error-message">Lo sentimos, la página que buscas no se encontró.</div>
+  <div class="error-code animate__animated animate__bounce">500</div>
+  <div class="error-message">Lo sentimos, ocurrió un error en el servidor.</div>
   <a href="{{ url_for('index') }}" class="btn btn-primary mt-3" data-no-swup>Volver al Inicio</a>
 </div>
 {% endblock %}
