--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -43,7 +43,7 @@
         </form>
 
         <div class="mt-3 text-center">
-          ¿No tienes cuenta? <a href="{{ url_for('auth.register') }}">Regístrate</a>
+          ¿No tienes cuenta? <a href="{{ url_for('auth.register') }}" data-no-swup>Regístrate</a>
         </div>
       </div>
     </div>
