--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -77,7 +77,7 @@
       </form>
 
       <div class="mt-3 text-center">
-        ¿Ya tienes cuenta? <a href="{{ url_for('auth.login') }}">Inicia Sesión</a>
+        ¿Ya tienes cuenta? <a href="{{ url_for('auth.login') }}" data-no-swup>Inicia Sesión</a>
       </div>
     </div>
   </div>
